<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="380dp">

        <EditText
            android:id="@+id/log"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:hint="@string/login"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints">

        </EditText>

        <EditText
            android:id="@+id/pass"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="120dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            tools:ignore="MissingConstraints">

        </EditText>

        <Button
            android:id="@+id/savebutton"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="190dp"
            android:onClick="handler"
            android:text="@string/save"/>

        <Button
            android:id="@+id/loadbutton"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="260dp"
            android:onClick="handler"
            android:text="@string/load"/>

        <Button
            android:id="@+id/nextc"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:layout_marginStart="-350dp"
            android:layout_marginTop="330dp"
            android:onClick="handler"
            android:text="@string/next"/>
    </LinearLayout>


</LinearLayout>